--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -46,10 +46,14 @@ body {
       font-size: 14px;
       padding: 7px 14px;
       background-color: $main-color;
-      border: 1px solid $accent-active-color;
+      border: 1px solid $accent-color;
       border-radius: 4px;
       outline: none;
       color: $light-color;
+
+      &:focus {
+        border: 1px solid $accent-active-color;
+      }
     }
 
     #description-input {
@@ -110,6 +114,18 @@ body {
       .task-title {
         font-size: 22px;
         font-weight: 500;
+      }
+
+      .task-description {
+        font-size: 14px;
+        max-height: 33px;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        line-height: 16px;
+        height: 33px;
       }
     }
 
@@ -294,92 +310,180 @@ body {
 }
 
 .edit-screen {
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: $dark-background;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: $dialogue-transition;
+  flex-direction: row;
+  justify-content: center;
+
+  #edit-wrapper {
+    width: 90%;
+    height: 50%;
+    background-color: $main-color;
     position: absolute;
-    z-index: 20;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: $dark-background;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    bottom: 0;
     display: flex;
-    visibility: hidden;
-    opacity: 0;
-    transition: $dialogue-transition;
-    flex-direction: row;
-    justify-content: center;
-  
-    #edit-wrapper {
-      width: 90%;
-      height: 50%;
-      background-color: $main-color;
-      position: absolute;
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
-      bottom: 0;
+
+    .edit-menu {
+      padding: 18px;
+      color: $light-color;
+      font-size: 18px;
+      gap: 8px;
       display: flex;
-  
-      .edit-menu {
-        padding: 18px;
-        color: $light-color;
-        font-size: 18px;
-        gap: 8px;
+      flex: 1;
+      align-items: center;
+      flex-direction: column;
+
+      .edit-inputs {
+        width: 100%;
         display: flex;
-        flex: 1;
-        align-items: center;
         flex-direction: column;
+        gap: 8px;
+        flex: 1;
+        outline: none;
+        font-size: 14px;
 
-        .edit-inputs {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            flex: 1;
+        .edit-input {
+          color: $light-color;
+          border: 1px solid $accent-color;
+          background: $share-button-background;
+          border-radius: 4px;
+          height: 32px;
+          padding: 0px 9px;
+
+          &:focus {
             outline: none;
-            font-size: 14px;
-
-            .edit-input {
-                color: $light-color;
-                border: 1px solid $accent-color;
-                background: $share-button-background;
-                border-radius: 4px;
-                height: 32px;
-                padding: 0px 9px;
-
-                &:focus {
-                    outline: none; 
-                }
-            }
-
-            #edit-description {
-                color: $light-color;
-                height: 100%;
-                padding: 7px 9px;
-
-                &:focus {
-                    outline: none; 
-                }
-            }
-        }
-  
-        .edit-buttons {
-          display: flex;
-          flex-direction: row;
-          gap: 10px;
-  
-          .edit-button {
-            width: 64px;
-            height: 24px;
-            background-color: $main-color;
-            border: 1px solid $accent-color;
-            color: $light-color;
-            border-radius: 4px;
-            font-size: 10px;
-            cursor: pointer;
+            border: 1px solid $accent-active-color;
           }
+        }
+
+        #edit-description {
+          color: $light-color;
+          height: 100%;
+          padding: 7px 9px;
+
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+
+      .edit-buttons {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+
+        .edit-button {
+          width: 64px;
+          height: 24px;
+          background-color: $main-color;
+          border: 1px solid $accent-color;
+          color: $light-color;
+          border-radius: 4px;
+          font-size: 10px;
+          cursor: pointer;
         }
       }
     }
   }
+}
+
+.info-screen {
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: $dark-background;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: $dialogue-transition;
+  flex-direction: row;
+  justify-content: center;
+
+  #info-wrapper {
+    width: 90%;
+    height: 50%;
+    background-color: $main-color;
+    position: absolute;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    bottom: 0;
+    display: flex;
+
+    .info-menu {
+      padding: 18px;
+      color: $light-color;
+      font-size: 18px;
+      gap: 8px;
+      display: flex;
+      flex: 1;
+      align-items: flex-start;
+      flex-direction: column;
+
+      .info-header {
+        width: 100%;
+        text-align: center;
+        font-weight: 700;
+        font-size: 24px;
+      }
+
+      .info-texts {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        flex: 1;
+        outline: none;
+        font-size: 22px;
+
+        .info-title {
+          color: $light-color;
+          background: $share-button-background;
+          border-radius: 4px;
+          padding: 0px 9px;
+          font-weight: 600;
+        }
+
+        #info-description {
+            font-size: 16px;
+          color: $light-color;
+          height: 100%;
+          padding: 7px 9px;
+        }
+      }
+
+      .edit-buttons {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+
+        .edit-button {
+          width: 64px;
+          height: 24px;
+          background-color: $main-color;
+          border: 1px solid $accent-color;
+          color: $light-color;
+          border-radius: 4px;
+          font-size: 10px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
 
 .active-screen {
   visibility: visible;
