Fixed some bugs and made it easier to run
Now hyphenation works correctly and the table in the database is created automatically on startup. Also I edit README.

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -126,6 +126,7 @@ body {
         text-overflow: ellipsis;
         line-height: 16px;
         height: 33px;
+        white-space: pre-wrap;
       }
     }
 
