--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -107,6 +107,7 @@ body {
   text-overflow: ellipsis;
   line-height: 16px;
   height: 33px;
+  white-space: pre-wrap;
 }
 .task .task-wrapper .delete-task-button {
   width: 32px;
